# gradient

./: README.md  pyproject.toml
gradient/: create_gradient.py
gradient_cv/: __init__.py  create_gradient.py
